# python-clean-architecture-example

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
docs/diagrams/: c4-component-diagram.yml  c4-component.puml
example/: __init__.py  __main__.py  config.py
example/cli/: adapter.py  controller.py
example/core/: find.py  geo.py  use_cases.py
example/core/domain/: geo.py
example/core/entities/: exceptions.py
example/core/find/: usecase.py
example/core/shared/: customer.py  geo.py
example/search/: __init__.py  customer.py  geo.py
example/terminal/: cli.py  input.py
tests/: conftest.py
tests/cli/: customers.txt  test_adapter.py  test_controller.py
tests/core/: test_customer.py  test_find.py  test_geo.py  test_use_cases.py
tests/core/domain/: test_customer.py  test_geo.py
tests/core/find/: test_usecase.py
tests/core/shared/: test_customer.py  test_geo.py
tests/search/: test_customer.py  test_geo.py
tests/terminal/: test_cli.py  test_input.py
